# Monorepo

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  Rocket.toml.example  saved_state.json  schema.sql
backend/src/: db.rs  lib.rs  main.rs
backend/src/code_analysis/: ai.rs  characteristics.rs  mod.rs
backend/src/endpoints/: ep_add_to_db.rs  ep_analyse_github.rs  ep_analyse_repo.rs  ep_candidates.rs  ep_github_analysis.rs  ep_jobs.rs  ep_match_candidates.rs  ep_resumes.rs  ep_sourcing.rs  ep_take_home.rs  ep_teams.rs  mod.rs
backend/src/github/: ai_analysis.rs  ai_summary.rs  analyze.rs  api.rs  embeddings.rs  mod.rs  semantic_search.rs  stats.rs  take_home.rs
backend/src/matching/: culture.rs  experience.rs  mod.rs  skills.rs  team_fit.rs
backend/tests/: match_engine.rs
frontend/: .dockerignore  Dockerfile  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: AIAnalysisCard.tsx  AddCandidateToTeamModal.tsx  AddTeamMemberModal.tsx  BulkActionBar.tsx  CandidateCard.tsx  CandidateComparisonPanel.tsx  CandidateDetailModal.tsx  CodeCharacteristicsRadar.tsx  CreateJobModal.tsx  CreateTeamFromJobModal.tsx  CreateTeamModal.tsx  DeleteConfirmModal.tsx  EditJobModal.tsx  EditTeamMemberModal.tsx  EditTeamModal.tsx  ExportDropdown.tsx  FileUpload.tsx  FilterBar.tsx  Header.tsx  JobCard.tsx  JobSelector.tsx  JobTeamPanel.tsx  JobsNavBar.tsx  MatchedCandidateCard.tsx  ScoreBreakdown.tsx  ScoreRing.tsx  SelectableCandidateCard.tsx  SourceCandidatesModal.tsx  SourcingStatusBanner.tsx  TeamCard.tsx  TeamDetailModal.tsx  TeamMemberCard.tsx  TeamMemberDetailModal.tsx  TeamPanel.tsx  TeamSelector.tsx  index.ts
frontend/app/dashboard/: page.tsx
frontend/app/data/: mockCandidates.ts
frontend/app/lib/: api.ts
scraping/: .env.example  .gitignore  README.md  main.py  profiles.py  pyproject.toml
scraping/src/scraping/: __init__.py  main.py
scraping/src/scraping/api/: routes.py
scraping/src/scraping/models/: __init__.py  profile.py
scraping/src/scraping/scrapers/: __init__.py  linkedin.py  search.py
web_scraping/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
web_scraping/src/web_scraping/: __init__.py  main.py
web_scraping/src/web_scraping/api/: routes.py
web_scraping/src/web_scraping/crawler/: __init__.py  developer.py  llm.py  service.py
web_scraping/src/web_scraping/models/: __init__.py  schemas.py
(+12 files in other folders)
