[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
genai = "0.4.4"
rocket = { version = "0.5.1", features = ["json"] }
rocket_db_pools = { version = "0.2.0", features = ["sqlx_macros", "sqlx_postgres"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = "1.48.0"
uuid = { version = "1.19.0", features = ["v4"] }
walkdir = "2.5.0"
