[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
genai = "0.4.4"
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6"
rocket_db_pools = { version = "0.2.0", features = ["sqlx_macros", "sqlx_postgres"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = "1.48.0"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
walkdir = "2.5.0"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.22"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
strsim = "0.11"
pdf-extract = "0.7"
zip = "0.6"
tempfile = "3"
